--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="net_error">加载失败!</string>
     <string name="retry">重试</string>
 
-    <string name="bottom_mf">％1$d 部新番,共 ％2$d 话</string>
+    <string name="bottom_mf">%1$d部新番,共%2$d话</string>
 
     <string-array name="main_tab_titles">
         <item>我</item>
