--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="retry">重试</string>
 
     <string name="bottom_mf">%1$d部新番,共%2$d话</string>
+    <string name="detail_head_info">周%1$s更新,已更新%2$s话</string>
 
     <string-array name="main_tab_titles">
         <item>我</item>
